# difftest

./: .gitignore  ARCHITECTURE.md  Cargo.toml  PLAN.md  README.md  pyproject.toml
crates/difftest-cli/: Cargo.toml
crates/difftest-cli/src/: agent.rs  baseline.rs  bridge.rs  cache.rs  compare.rs  config.rs  main.rs  run.rs
crates/difftest-core/: Cargo.toml
crates/difftest-core/src/: compare.rs  error.rs  html_report.rs  junit.rs  lib.rs  markdown.rs  report.rs  runner.rs  storage.rs  suite.rs
crates/difftest-python/: Cargo.toml
crates/difftest-python/src/: lib.rs
examples/: basic_test.py  github-actions.yml
python/difftest/: __init__.py  baselines.py  decorators.py  discovery.py  errors.py
python/difftest/agent/: __init__.py  bridge.py  designer.py  diagnostician.py  prompts.py  tracker.py
python/difftest/generators/: __init__.py  api.py  base.py  comfyui.py  diffusers.py  retry.py
python/difftest/llm/: __init__.py  base.py  claude.py  local.py  openai_provider.py
python/difftest/metrics/: __init__.py  aesthetic_score.py  clip_score.py  dreamsim_metric.py  fid.py  geneval.py  image_reward.py  lpips_metric.py  pick_score.py  ssim.py  vlm_judge.py
python/difftest/prompts/: __init__.py  registry.py  templating.py
python/difftest/prompts/suites/: abstract.json  animals.json  architecture.json  composition.json  food.json  general.json  hands.json  medical.json  portraits.json  styles.json  text.json
tests/: test_aesthetic_score.py  test_agent_designer.py  test_agent_diagnostician.py  test_agent_tracker.py  test_api_generator.py  test_baselines.py  test_comfyui_generator.py  test_decorators.py  test_dreamsim.py  test_errors.py  test_fid.py  test_generator_registry.py  test_geneval.py  test_image_reward.py  test_llm_providers.py  test_llm_registry.py  test_lpips.py  test_metric_registry.py  test_metrics.py  test_pick_score.py  test_prompt_suites.py  test_prompt_templating.py  test_retry.py  test_ssim.py  test_storage.py  test_suite_discovery.py  test_vlm_judge.py
