[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "difftest"
version = "0.1.0"
description = "pytest for diffusion models"
requires-python = ">=3.10"
dependencies = [
    "transformers>=4.30",
    "torch>=2.0",
    "diffusers>=0.25",
    "Pillow>=10.0",
    "scikit-image>=0.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
image-reward = [
    "image-reward>=1.0",
]
fid = [
    "scipy>=1.10",
    "torchvision>=0.15",
]
all-metrics = [
    "image-reward>=1.0",
    "scipy>=1.10",
    "torchvision>=0.15",
]

[tool.maturin]
python-source = "python"
module-name = "difftest.difftest_python"
features = ["pyo3/extension-module"]
