[package]
name = "difftest-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "difftest"
path = "src/main.rs"

[dependencies]
difftest-core = { path = "../difftest-core" }
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
pyo3 = { version = "0.28", features = ["auto-initialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
toml = "0.8"
